# spellbook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  ui-spec.txt
.claude/skills/gitleaks-check/: SKILL.md
.claude/skills/soc-analyst/: SKILL.md
.github/: copilot-instructions.md
deploy/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: check_gemini.py
spellbook/: __init__.py  banner.py  cli.py  collect.py  config.py  menu.py
spellbook/agent/: hooks.py  options.py  prompts.py  session.py
spellbook/case/: model.py  store.py
spellbook/control/: app.py  orchestrator.py  seed.py  server.py
spellbook/control/agent/: google_agent.py  prompts.py  schema.py
spellbook/control/ingest/: model.py  wire.py  wiz_api.py
spellbook/control/safety/: authorization.py  decide.py  scope.py
spellbook/control/store/: models.py  store.py
spellbook/mcp/: servers.py
spellbook/runner/: audit.py  dispatch.py  server.py
spellbook/runner/tools/: __init__.py  exploit.py  gcp_backend.py  gcp_lateral.py  network.py  poc_catalog.py  poc_executor.py  registry.py  web.py
spellbook/safety/: classify.py  scope.py
spellbook/wiz/: __init__.py  auth.py  cache.py
spellbook/worker/: __init__.py  control_client.py  loop.py  server.py  tools.py
tests/: test_app.py  test_attack_paths.py  test_auth.py  test_cache.py  test_cli.py  test_collect.py  test_config.py  test_control_safety.py  test_control_server.py  test_exploit_poc.py  test_gcp_lateral.py  test_google_agent.py  test_mcp.py  test_menu.py  test_orchestrator.py  test_per_step.py  test_runner_dispatch.py  test_runner_server.py  test_safety.py  test_show_verdict.py  test_store.py  test_wiz_api.py  test_worker_loop.py  test_worker_tools.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  theme.css  types.ts
web/src/components/: Badge.tsx  ComingSoon.tsx  Sidebar.tsx  StepChain.css  StepChain.tsx  ui.tsx
web/src/lib/: stats.ts  theme.ts
web/src/views/: Dashboard.tsx  FindingDetail.tsx  Findings.tsx  ManualBuilder.tsx
