[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spellbook"
version = "0.1.0"
description = "Wiz security-issue triage CLI on the Claude Agent SDK (Milestone 0)"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.2",
    "typer>=0.12",
    "pydantic>=2",
]

[project.scripts]
spellbook = "spellbook.cli:app"

[tool.setuptools.packages.find]
include = ["spellbook*"]
