[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spellbook"
version = "0.1.0"
description = "Wiz finding exploitability-validation platform (external + internal attack-runners, Google Managed Agents)"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.2",
    "typer>=0.12",
    "pydantic>=2",
    "httpx>=0.27",
    "mcp>=1.0",          # runner exposes tools to the agent as a remote MCP server
    "sqlalchemy>=2.0",   # control-plane store
    "google-genai>=1.0", # Gemini Interactions API (Managed Agents)
]

[project.scripts]
spellbook = "spellbook.cli:app"

[tool.setuptools.packages.find]
include = ["spellbook*"]
