[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spellbook"
version = "0.1.0"
description = "Wiz finding exploitability-validation platform (in-VPC Claude Agent SDK workers + control plane)"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.2",  # in-VPC agent-worker brain (spellbook.worker)
    "typer>=0.12",
    "pydantic>=2",
    "httpx>=0.27",       # worker ↔ control-plane internal API
    "mcp>=1.0",          # runner tools exposed to the agent as an in-process SDK MCP server
    "sqlalchemy>=2.0",   # control-plane store
    "fastapi>=0.115",    # control-plane web surface (spellbook.control.app)
    "uvicorn[standard]>=0.30",  # ASGI server for the control plane
    "psycopg[binary]>=3.2",     # Postgres driver (postgresql+psycopg:// in prod/docker)
]

[project.scripts]
spellbook = "spellbook.cli:app"
spellbook-worker = "spellbook.worker.server:main"

[tool.setuptools.packages.find]
include = ["spellbook*"]
